# selfheal

./: .env.example  .gitignore  BUILD_PLAN.md  LICENSE  README.md  package-lock.json  package.json
demo/buggy-app/: index.html
scripts/: uipath-chain.ts  uipath-defect.ts  uipath-explore.ts
src/: agent.ts  cli.ts  heal.ts  llm.ts  testgen.ts  types.ts
src/executor/: index.ts  mock.ts  playwright.ts  uipath.ts
submission/: DECK.md  DEMO_SCRIPT.md  PRODUCT_FEEDBACK.md  START-HERE.html  SUBMISSION.md  SUBMIT-FINAL.html  UIPATH-DEPLOY.md  benchmark-results.json  build-guide.mjs  deck.html  input-bug.json  input-clean.json  orchestrator-job.json  render-deck.mjs  sample-run-bug.json  sample-run-clean.json
tests/: heal.test.ts
uipath-agent/: AGENTS.md  benchmark.py  bindings.json  cleanup.py  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
uipath-agent/.agent/: CLI_REFERENCE.md  REQUIRED_STRUCTURE.md  SDK_REFERENCE.md
uipath-agent/.claude/commands/: eval.md  new-agent.md
